--- a/WOTS/Base.lproj/Main.storyboard
+++ b/WOTS/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
         <!--Standard Quiz View Controller-->
         <scene sceneID="fGw-Cg-VeU">
             <objects>
-                <viewController id="CQ6-xw-FVR" customClass="StandardQuizViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StandardQuiz" id="CQ6-xw-FVR" customClass="StandardQuizViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="LaE-AU-1k9"/>
                         <viewControllerLayoutGuide type="bottom" id="KUq-Mf-fT9"/>
@@ -40,36 +40,60 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notecard" translatesAutoresizingMaskIntoConstraints="NO" id="Swb-Z0-chz">
+                                <rect key="frame" x="25" y="77" width="324" height="276"/>
+                            </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Translation Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyv-Sr-dKQ">
-                                <rect key="frame" x="26" y="335" width="323" height="30"/>
+                                <rect key="frame" x="26" y="296.5" width="323" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z6a-lQ-L84">
-                                <rect key="frame" x="166" y="114" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="161" y="120" width="54" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lMs-t8-xOF">
+                                <rect key="frame" x="171" y="297" width="37" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="TBO-H3-cLm" kind="show" id="hEy-zp-eZ9"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="oyv-Sr-dKQ" firstAttribute="top" secondItem="z6a-lQ-L84" secondAttribute="bottom" constant="200" id="3O5-dy-yKO"/>
-                            <constraint firstItem="z6a-lQ-L84" firstAttribute="top" secondItem="LaE-AU-1k9" secondAttribute="bottom" constant="50" id="NMH-1w-PBd"/>
+                            <constraint firstItem="oyv-Sr-dKQ" firstAttribute="top" secondItem="z6a-lQ-L84" secondAttribute="bottom" constant="150" id="3O5-dy-yKO"/>
+                            <constraint firstItem="KUq-Mf-fT9" firstAttribute="top" secondItem="Swb-Z0-chz" secondAttribute="bottom" constant="314" id="EZK-AX-rjF"/>
+                            <constraint firstItem="Swb-Z0-chz" firstAttribute="leading" secondItem="VVL-Xq-Gde" secondAttribute="leadingMargin" constant="9" id="HCC-Ma-CRQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Swb-Z0-chz" secondAttribute="trailing" constant="10" id="IGv-o8-zp0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Swb-Z0-chz" secondAttribute="trailing" constant="10" id="IQR-gT-jr6"/>
+                            <constraint firstItem="Swb-Z0-chz" firstAttribute="centerX" secondItem="VVL-Xq-Gde" secondAttribute="centerX" id="LGT-h3-ZE5"/>
+                            <constraint firstItem="z6a-lQ-L84" firstAttribute="top" secondItem="LaE-AU-1k9" secondAttribute="bottom" constant="100" id="NMH-1w-PBd"/>
+                            <constraint firstItem="Swb-Z0-chz" firstAttribute="top" secondItem="LaE-AU-1k9" secondAttribute="bottom" constant="57" id="Sbx-RX-T1o"/>
                             <constraint firstItem="oyv-Sr-dKQ" firstAttribute="centerX" secondItem="VVL-Xq-Gde" secondAttribute="centerX" id="T3q-kv-m44"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oyv-Sr-dKQ" secondAttribute="trailing" constant="10" id="dWa-VF-cRb"/>
+                            <constraint firstItem="lMs-t8-xOF" firstAttribute="centerX" secondItem="VVL-Xq-Gde" secondAttribute="centerX" id="mE5-c7-IRE"/>
+                            <constraint firstItem="lMs-t8-xOF" firstAttribute="top" secondItem="z6a-lQ-L84" secondAttribute="bottom" constant="162" id="rmg-ln-RVe"/>
                             <constraint firstItem="z6a-lQ-L84" firstAttribute="centerX" secondItem="VVL-Xq-Gde" secondAttribute="centerX" id="uJp-He-wGj"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="currentWordLabel" destination="z6a-lQ-L84" id="fx4-RK-fzn"/>
+                        <outlet property="doneButton" destination="lMs-t8-xOF" id="GZA-co-OOe"/>
                         <outlet property="userInput" destination="oyv-Sr-dKQ" id="wfG-aT-djh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TUc-G7-k44" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2012" y="-920"/>
+            <point key="canvasLocation" x="2028" y="-920.68965517241384"/>
         </scene>
         <!--Note Card View Controller-->
         <scene sceneID="8MQ-Ou-8vp">
@@ -84,7 +108,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-W8-J4f" customClass="KolodaView" customModule="Koloda">
-                                <rect key="frame" x="10" y="121" width="355" height="183"/>
+                                <rect key="frame" x="10" y="77" width="355" height="276"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d3s-T8-1zm">
@@ -247,5 +271,9 @@
     <resources>
         <image name="exploreIcon" width="25" height="25"/>
         <image name="learnIcon" width="25" height="25"/>
+        <image name="notecard" width="600" height="359"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="hEy-zp-eZ9"/>
+    </inferredMetricsTieBreakers>
 </document>
