--- a/WOTS/Base.lproj/Main.storyboard
+++ b/WOTS/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Explore-->
+        <!--Explore View Controller-->
         <scene sceneID="ILx-HY-SuD">
             <objects>
                 <viewController id="aHc-uU-dPf" customClass="ExploreViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
@@ -22,11 +22,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Explore" image="exploreIcon" id="WAo-Ap-y9b"/>
+                    <navigationItem key="navigationItem" id="jhp-OV-lA3"/>
+                    <connections>
+                        <segue destination="9kW-Je-6WC" kind="show" identifier="toPlaceDetails" id="gd2-vf-Z2a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9pN-lK-gGH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1090" y="558"/>
+            <point key="canvasLocation" x="2028" y="557.27136431784118"/>
+        </scene>
+        <!--Place Detail View Controller-->
+        <scene sceneID="Qt7-OC-DAW">
+            <objects>
+                <viewController id="9kW-Je-6WC" customClass="PlaceDetailViewController" customModule="WOTS" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mCw-Ik-G7P"/>
+                        <viewControllerLayoutGuide type="bottom" id="YcS-Aa-2PH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="WAp-9a-K9R">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CKe-bo-hIV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2937" y="557"/>
         </scene>
         <!--Standard Quiz View Controller-->
         <scene sceneID="fGw-Cg-VeU">
@@ -41,16 +62,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="notecard" translatesAutoresizingMaskIntoConstraints="NO" id="Swb-Z0-chz">
-                                <rect key="frame" x="25" y="77" width="324" height="276"/>
+                                <rect key="frame" x="25" y="121" width="324" height="183"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type Translation Here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oyv-Sr-dKQ">
-                                <rect key="frame" x="26" y="296.5" width="323" height="30"/>
+                                <rect key="frame" x="26" y="340.5" width="323" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z6a-lQ-L84">
-                                <rect key="frame" x="161" y="120" width="54" height="26.5"/>
+                                <rect key="frame" x="161" y="164" width="54" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -108,7 +129,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Sh-W8-J4f" customClass="KolodaView" customModule="Koloda">
-                                <rect key="frame" x="10" y="77" width="355" height="276"/>
+                                <rect key="frame" x="10" y="121" width="355" height="183"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d3s-T8-1zm">
@@ -223,7 +244,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="cEc-Pl-2nr" kind="relationship" relationship="viewControllers" id="APP-DX-vs1"/>
-                        <segue destination="aHc-uU-dPf" kind="relationship" relationship="viewControllers" id="U16-kg-rgl"/>
+                        <segue destination="uMY-KW-Ou3" kind="relationship" relationship="viewControllers" id="U16-kg-rgl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ck-Wr-2VB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -267,6 +288,25 @@
             </objects>
             <point key="canvasLocation" x="3240.8000000000002" y="-146.17691154422789"/>
         </scene>
+        <!--Explore-->
+        <scene sceneID="jMb-jG-orc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="uMY-KW-Ou3" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Explore" image="exploreIcon" id="WAo-Ap-y9b"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="iM2-UW-8IF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aHc-uU-dPf" kind="relationship" relationship="rootViewController" id="dci-Xl-mWo"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iSx-G8-Y1S" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1088.8" y="557.27136431784118"/>
+        </scene>
     </scenes>
     <resources>
         <image name="exploreIcon" width="25" height="25"/>
@@ -274,6 +314,6 @@
         <image name="notecard" width="600" height="359"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="hEy-zp-eZ9"/>
+        <segue reference="gqe-fT-jEp"/>
     </inferredMetricsTieBreakers>
 </document>
